style.css
.iconbutton {
    background-color: transparent;
    border: none;
    cursor: pointer;
}

section:first-of-type {
    margin-top: 50px;
}

section {
    /* background-color: red; */
    scroll-margin-top: 50px;
    max-width: 100vh;
    margin-left: auto;
    margin-right: auto;
    padding: 2rem;
    height: calc(100vh - 50px);
}

/* @media (max-width: 528px) {
    section {
        max-width: 100%;
    }
} */

section:nth-of-type(odd) {
    /* background-color: blue; */
}

